# Vanir

./: .gitignore  CMakeLists.txt  Callback.h  CommandLineOption.cpp  CommandLineOption.h  CommandLineOptionTypes.h  CommandLineUtils.cpp  CommandLineUtils.h  Factory.h  FactoryRegister.h  File.h  FileUtils.cpp  FileUtils.h  GenericFactory.h  Invokable.h  JSONFile.cpp  JSONFile.h  Logger.cpp  Logger.h  LoggerColor.cpp  LoggerColor.h  LoggerColors.h  LoggerTypes.h  Macros.h  MathsUtils.cpp  MathsUtils.h  README.md  Singleton.h  StringUtils.cpp  StringUtils.h
CMake/: Config.cmake
Include/Vanir/: Common.h
Include/Vanir/CLI/: Argument.h  ArgumentType.h  CLI.h  CLIArgument.h  CLIOptionType.h  CLIParsingError.h  CLIParsingResult.h
Include/Vanir/CommandLine/: CommandLineOption.h  CommandLineOptionTypes.h  CommandLineUtils.h
Include/Vanir/Error/: Error.h  Exception.h  FatalError.h
Include/Vanir/Event/: Callback.h  ConnectionData.h  Event.h  EventHandle.h  EventInternalData.h  Invokable.h
Include/Vanir/Factory/: Factory.h  FactoryRegister.h  GenericFactory.h
Include/Vanir/File/: FileUtils.h
Include/Vanir/FileSystem/: FileSystem.h
Include/Vanir/JSON/: JSONFile.h
Include/Vanir/Logger/: LogColor.h  Logger.h  LoggerColor.h  LoggerColors.h  LoggerTypes.h  TerminalColor.h
Include/Vanir/Math/: Math.h  Random.h  Xorshift.h
Include/Vanir/Maths/: MathsUtils.h
Include/Vanir/Module/: Module.h
Include/Vanir/Platform/Windows/: Resources.h  Version.rc
Include/Vanir/Singleton/: Singleton.h
Include/Vanir/String/: String.h  StringUtils.h
Include/Vanir/Utility/: NonCopyable.h  Singleton.h  Timer.h  Utils.h
Sources/CLI/: Argument.cpp  CLI.cpp  CLIArgument.cpp  CLIOption.cpp  CLIParsingResult.cpp
Sources/CommandLine/: CommandLineOption.cpp  CommandLineUtils.cpp
Sources/Error/: Exception.cpp  FatalError.cpp
Sources/Event/: ConnectionData.cpp  EventHandle.cpp  EventInternalData.cpp
Sources/File/: FileUtils.cpp
Sources/FileSystem/: FileSystem.cpp
Sources/JSON/: JSONFile.cpp
Sources/Logger/: LogColor.cpp  Logger.cpp  LoggerColor.cpp
Sources/Math/: Math.cpp  Random.cpp  Xorshift.cpp
Sources/Maths/: MathsUtils.cpp
Sources/String/: String.cpp  StringUtils.cpp
Sources/Utility/: Timer.cpp  Utils.cpp
Utils/Dirent/: Dirent.h
